<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/holo_orange_dark">

    <Button
        android:text="@string/learnwors"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/btn_study"
        android:background="@android:color/holo_red_dark"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"/>

    <Button
        android:text="@string/fixlearning"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/btn_repeat"
        android:background="@android:color/holo_red_dark"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"/>

    <Button
        android:text="@string/select_pair"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/button7"
        android:background="@android:color/holo_red_dark"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"/>

    <Button
        android:text="@string/select_translate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/button9"
        android:background="@android:color/holo_red_dark"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"/>

    <Button
        android:text="@string/writing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/button8"
        android:background="@android:color/holo_red_dark"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"/>
</LinearLayout>
